--- a/quick-start/src/main/resources/application.yml
+++ b/quick-start/src/main/resources/application.yml
@@ -11,5 +11,16 @@ spring:
         chat:
           options:
             model: deepseek-chat
+    #阿里百炼配置
+      dashscope:
+        api-key: ${dashscope.key}
+        #文本对话
+        chat:
+          options:
+            model: qwen-plus
+        #图生文
+        image:
+          options:
+            model: wanx-v1
 
 
