--- a/quick-start/pom.xml
+++ b/quick-start/pom.xml
@@ -34,6 +34,12 @@
             <!-- 请将 'the-latest-version' 替换为最新版本号：https://mvnrepository.com/artifact/com.alibaba/dashscope-sdk-java -->
             <version>2.21.8</version>
         </dependency>
+
+<!--        ollama-->
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-starter-model-ollama</artifactId>
+        </dependency>
     </dependencies>
 
 
