ChatClient-API及 模型选择 快速入门

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	<description>ai</description>
 	<modules>
 		<module>quick-start</module>
+		<module>client-start</module>
 	</modules>
 	<packaging>pom</packaging>
 	<url/>
