Advisor日志拦截器 快速入门

--- a/client-start/src/main/resources/application.yml
+++ b/client-start/src/main/resources/application.yml
@@ -12,3 +12,11 @@ spring:
       #deep_seek配置
       deepseek:
         api-key: ${deep-seek.key}
+logging:
+  level:
+    org:
+      springframework:
+        ai:
+          chat:
+            client:
+              advisor: DEBUG
