多用户会话记隔离 快速入门

--- a/client-start/src/main/resources/application.yml
+++ b/client-start/src/main/resources/application.yml
@@ -19,4 +19,5 @@ logging:
         ai:
           chat:
             client:
-              advisor: DEBUG
+              advisor:
+                SimpleLoggerAdvisor: DEBUG
