JDBC会话存储 快速入门

--- a/client-start/pom.xml
+++ b/client-start/pom.xml
@@ -42,6 +42,26 @@
             <artifactId>spring-ai-autoconfigure-model-chat-memory</artifactId>
         </dependency>
 
+
+<!--        会话存储方式-->
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-starter-model-chat-memory-repository-jdbc</artifactId>
+        </dependency>
+
+        <!--jdbc-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+
+
+        <!--mysql驱动-->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
 </project>
