Redis会话存储 快速入门

--- a/client-start/src/main/resources/application.yml
+++ b/client-start/src/main/resources/application.yml
@@ -25,6 +25,16 @@ spring:
             jdbc:
               initialize-schema: always
               schema: classpath:/schema-mysql.sql
+#redis
+ai:
+  redis:
+    host: localhost
+    port: 6379
+    timeout:  5000
+    password: 123456
+    database: 1
+
+
 #日志级别
 logging:
   level:
