mcp接入  快速入门

--- a/Tools-Demo/pom.xml
+++ b/Tools-Demo/pom.xml
@@ -29,6 +29,13 @@
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-autoconfigure-model-chat-memory</artifactId>
         </dependency>
+
+
+        <!--既支持sse\也支持Stdio-->
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-starter-mcp-client-webflux</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
