--- a/Tools-Demo/src/main/resources/mcp/mcp-servers-config.json
+++ b/Tools-Demo/src/main/resources/mcp/mcp-servers-config.json
@@ -28,6 +28,16 @@
         "D:/Codes/ai/customer-demo",
         "D:/Codes/ai/quick-start"
       ]
+    },
+
+    "mcp-stdio-server": {
+      "command": "java",
+      "args": [
+        "-Dspring.ai.mcp.server.stdio=true",
+        "-Dlogging.pattern.console=",
+        "-jar",
+        "D:\\Codes\\ai\\mcp-stdio\\target\\mcp-stdio-0.0.1-SNAPSHOT.jar"
+      ]
     }
 
   }
