SimpleVectorStore向量数据库  快速入门

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>customer-demo</module>
 		<module>mcp-stdio</module>
 		<module>mcp-sse</module>
+		<module>rag</module>
 	</modules>
 	<packaging>pom</packaging>
 	<url/>
