通过chatClient结合rag  快速入门

--- a/rag/pom.xml
+++ b/rag/pom.xml
@@ -23,6 +23,11 @@
             <groupId>com.alibaba.cloud.ai</groupId>
             <artifactId>spring-ai-alibaba-starter-dashscope</artifactId>
         </dependency>
+<!--        client && rag-->
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-advisors-vector-store</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
