spring-ai监控  快速入门

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,8 @@
 		<module>mcp-stdio</module>
 		<module>mcp-sse</module>
 		<module>rag</module>
-	</modules>
+        <module>actuator</module>
+    </modules>
 	<packaging>pom</packaging>
 	<url/>
 	<licenses>
