--- a/actuator/src/main/resources/application.yml
+++ b/actuator/src/main/resources/application.yml
@@ -13,9 +13,10 @@ spring:
   threads:
     virtual:
       enabled: true
-
+  #加载 key 配置文件
+  profiles:
+    active: key
   ai:
-
     #deep_seek配置
     deepseek:
       api-key: ${deep-seek.key}
